// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the total summary  1`] = `
<div>
  <p>
    Viewing : 
    3
     
    expenses
     , The total : 
    $6.36
  </p>
</div>
`;

exports[`should rnder the sammary with one expense 1`] = `
<div>
  <p>
    Viewing : 
    1
     
    expense
     , The total : 
    $2.12
  </p>
</div>
`;
